tests/error/override_static.gw
// [contains] but cannot override
class C
{
	fun static void test() {}
}

class D extends C
{
	fun void test() {}
}
